2009-01-05  Matthias Clasen  <mclasen@redhat.com>

	* configure.in: Bump version

2009-01-05  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.19.4 ===

	* NEWS: Updates

2009-01-05  Dan Winship  <danw@gnome.org>

	* glib/tests/.gitignore: update

	* tests/.gitignore: update, sort

	* tests/gobject/.gitignore: add

2009-01-05  Tor Lillqvist  <tml@iki.fi>

	Bug 566348 - g_file_open_tmp uses the wrong g_mkstemp on win32

	* glib/gfileutils.c: Move the binary compatibility versions of
	g_file_test(), g_file_get_contents(), g_mkstemp() and
	g_file_open_tmp() last in the file. Remove the restriction that
	the XXXXXX is last in the template in the binary compatibility
	version of g_mkstemp(). Thanks to Morten Welinder and Jody
	Goldberg.

2009-01-03  Matthias Clasen  <mclasen@redhat.com>

	* NEWS: Updates

2009-01-02  Matthias Clasen  <mclasen@redhat.com>

	* glib/gregex.c: Add an example to the g_regex_replace_eval() docs.

2009-01-02  Matthias Clasen  <mclasen@redhat.com>

	* glib/gstrfuncs.c: Move docs inline, adding references to g_free()
	where appropriate.

2009-01-02  Matthias Clasen  <mclasen@redhat.com>

	Bug 564210 – SUN Studio 12 has supported visibility attribute

	* configure.in: Use visibility attribute for new enough sun cc.
	Patch by Chris Wang

2008-12-30  Matthias Clasen  <mclasen@redhat.com>

	Bug 565905 – There is no named g_context_group_set_translation_domain()
	in GOption command line parser

	* glib/goption.c: Fix a wrong reference in the docs, reported by
	Takeshi Aihana.

2008-12-30  Matthias Clasen  <mclasen@redhat.com>

	* glib/gspawn.c:
	* glib/gthread.c:
	* glib/goption.c:
	* glib/gmain.c:
	* glib/gkeyfile.c:
	* glib/gfileutils.c:
	* glib/gdate.c:
	* glib/garray.c:
	* glib/gbookmarkfile.c:
	* glib/gbacktrace.c: Fix some compiler warnings.

2008-12-19  Tor Lillqvist  <tml@novell.com>

	* glib/glib.symbols: Add g_thread_get_initialized here,
	too. Surround g_test_config_vars with ifdef INCLUDE_VARIABLES.
