@@ -298,14 +298,19 @@ get_package_directory_from_module (const gchar *module_name)
       hmodule = GetModuleHandleW (wc_module_name);
       g_free (wc_module_name);
 
-      if (!hmodule)
-	return NULL;
+      if (!hmodule){
+        G_UNLOCK (module_dirs);
+        return NULL;
+      }
     }
 
   fn = g_win32_get_package_installation_directory_of_module (hmodule);
 
   if (fn == NULL)
-    return NULL;
+    {
+      G_UNLOCK (module_dirs);
+      return NULL;
+    }
   
   g_hash_table_insert (module_dirs, module_name ? g_strdup (module_name) : "", fn);
 
